--- a/webapp/src/app/components/app-repository/app-repository.component.css
+++ b/webapp/src/app/components/app-repository/app-repository.component.css
@@ -1,36 +1,19 @@
-.app-toolbar {
-    position: fixed;
-    z-index: 1000;
-    margin-top: 64px;
+.containers {
+  width: 95%;
 }
 
-section {
-  display: table;
-  margin-top: 148px;
-  margin-left: 20px;
-  margin-bottom: 20px;
+.app-card {
+  max-width: 360px;
+  max-height: 300px;
+  background-color: rgb(225, 238, 247);
 }
 
-.containersRepo {
-    margin-left: 20px;
-    display: inline-grid;
-    grid-template-columns: 390px 390px 390px;
-    position: absolute;
-  }
+.filter-group {
+  width: 700px;
+  margin-top: 30px;
+  margin-left: 30px;
+}
 
-  .example-card {
-    max-width: 360px;
-    max-height: 300px;
-    margin-bottom: 50px;
-    margin-right: 30px;
-    background-color: rgb(225, 238, 247);
-  }
-
-  .example-button-row {
-    display: table-cell;
-    width: 700px;
-  }
-  
-  .mat-button-base {
-    margin: 8px 8px;
-  }
+.mat-button {
+  margin: 10px;
+}
