--- a/webapp/src/app/components/apps/apps.component.css
+++ b/webapp/src/app/components/apps/apps.component.css
@@ -1,12 +1,5 @@
-/* section {
-  display: table;
-  margin-top: 148px;
-  margin-left: 20px;
-  margin-bottom: 20px;
-} */
-
 .containers {
-  width: calc(100vh - 64px);
+  width: 95%;
 }
 
 .app-card {
