--- a/webapp/src/app/components/images/images.component.css
+++ b/webapp/src/app/components/images/images.component.css
@@ -1,17 +1,12 @@
-.app-toolbar {
-  position: fixed;
-  z-index: 1000;
-  margin-top: 64px;
-}
-
 .Images {
-  margin-top: 148px;
-  margin-left: 20px;
+  margin-top: 30px;
+  margin-left: 30px;
+  margin-right: 30px;
   }
 
-  .example-card {
-    width: 700px;
-    height: 110px;
+  .app-card {
+    max-width: 700px;
+    max-height: 110px;
     margin-bottom: 30px;
     background-color: rgb(245, 245, 248);
   }
