--- a/webapp/src/app/components/images/images.component.html
+++ b/webapp/src/app/components/images/images.component.html
@@ -3,11 +3,11 @@
 </mat-toolbar>
 <div class="Images">
     <span  *ngFor="let image of images; let i = index">
-        <mat-card class="example-card" *ngIf="hideImage(image.RepoTags[0])">
-            <mat-card-title-group>
+        <mat-card class="app-card" *ngIf="hideImage(image.RepoTags[0])">
+            <mat-card-header>
                 <mat-card-title>{{image.RepoTags[0]}}</mat-card-title>
                 <mat-card-subtitle>Containers: {{image.Containers}}</mat-card-subtitle>
-            </mat-card-title-group>
+            </mat-card-header>
             <mat-card-content>
             </mat-card-content>
             <mat-card-actions align="end">
