--- a/webapp/src/app/components/networks/networks.component.css
+++ b/webapp/src/app/components/networks/networks.component.css
@@ -1,40 +1,18 @@
-.app-toolbar {
-  position: fixed;
-  z-index: 1000;
-  margin-top: 64px;
-  }
-  
-  .Networks {
-      margin-left: 20px;
-    }
-  
-    .example-card {
-      width: 700px;
+    .app-card {
+      max-width: 700px;
       max-height: 800px;
       margin-bottom: 30px;
+      margin-left: 30px;
+      margin-right: 30px;
       background-color: rgb(245, 245, 248);
     }
   
-    .example-full-width {
-      width: 90%;
+    .create-network {
+      margin-top: 30px;
+      margin-left: 30px;
+      width: 400px;
     }
-  
-    section {
-      display: table;
-      margin-top: 148px;
-      margin-left: 20px;
-      margin-bottom: 20px;
-    }
-  
-    .example-button-row {
-      display: table-cell;
-      width: 700px;
-    }
-    
-    .example-button-row .mat-button-base {
-      margin: 8px 8px;
-    }
-  
-    .example-margin {
-      margin-left: 20px;
+
+    .mat-button {
+      margin: 10px;
     }
