--- a/webapp/src/app/components/networks/networks.component.html
+++ b/webapp/src/app/components/networks/networks.component.html
@@ -1,17 +1,15 @@
 <mat-toolbar class="app-toolbar">
     <span>Networks</span>
 </mat-toolbar>
-<section>
-    <div class="example-button-row">
-      <mat-form-field appearance="fill" *ngIf="roleExpert()">
-        <mat-label>Network Name</mat-label>
-        <input matInput placeholder="my-network" [(ngModel)]="networkName">
-      </mat-form-field>
-      <button mat-raised-button color="primary" (click)="createNetwork()" *ngIf="roleExpert()">Create Network</button>
-    </div>
-</section>
-<div class="Networks">
-    <mat-card class="example-card" *ngFor="let network of networks; let i = index">
+<div class="create-network">
+  <mat-form-field appearance="fill" *ngIf="roleExpert()">
+    <mat-label>Network Name</mat-label>
+    <input matInput placeholder="my-network" [(ngModel)]="networkName">
+  </mat-form-field>
+  <button mat-raised-button class="mat-button" color="primary" (click)="createNetwork()" *ngIf="roleExpert()">Create Network</button>
+</div>
+
+    <mat-card class="app-card" *ngFor="let network of networks; let i = index">
         <mat-card-title-group>
           <mat-card-title>{{network.Name}}</mat-card-title>
           <mat-card-subtitle>
@@ -35,4 +33,4 @@
             <button mat-button (click)="removeNetwork(network.Id)" [disabled]="!roleExpert()">Remove Network</button>
         </mat-card-actions>
     </mat-card>
-</div>
+
