--- a/webapp/src/app/components/volumes/volumes.component.css
+++ b/webapp/src/app/components/volumes/volumes.component.css
@@ -1,39 +1,12 @@
-.app-toolbar {
-  position: fixed;
-  z-index: 1000;
-  margin-top: 64px;
+.Volumes {
+  margin-top: 30px;
+  margin-left: 30px;
+  margin-right: 30px;
   }
   
-  .Images {
-      margin-top: 148px;
-      margin-left: 20px;
-    }
-  
-    .example-card {
-      width: 900px;
-      max-height: 300px;
-      margin-bottom: 30px;
-      background-color: rgb(245, 245, 248);
-    }
-  
-    .example-full-width {
-      width: 90%;
-    }
-  
-    section {
-      display: table;
-      margin-left: 30px;
-    }
-  
-    .example-button-row {
-      display: table-cell;
-      width: 700px;
-    }
-    
-    .example-button-row .mat-button-base {
-      margin: 8px 8px;
-    }
-  
-    .example-margin {
-      margin-left: 20px;
-    }
+.app-card {
+  max-width: 900px;
+  max-height: 300px;
+  margin-bottom: 30px;
+  background-color: rgb(245, 245, 248);
+}
