--- a/webapp/src/app/components/host-stats/stats.component.css
+++ b/webapp/src/app/components/host-stats/stats.component.css
@@ -1,34 +1,30 @@
-.app-toolbar {
-  position: fixed;
-  z-index: 1000;
-  margin-top: 64px;
-  }
-
-  .system {
-    margin-top: 148px;
-    margin-left: 20px;
-    display: inline-grid;
-    grid-template-columns: 460px 460px;
-    position: absolute;
+.system {
+  margin-left: 30px;
+  margin-top: 30px;
+  display: inline-flex;
+  flex-wrap: wrap;
   }
   
   .cpu-card {
     width: 400px;
     max-height: 600px;
+    margin-right: 30px;
     margin-bottom: 30px;
     background-color: rgb(245, 245, 248);
   }
 
   .memory-card {
-    width: 500px;
+    width: 400px;
     max-height: 600px;
+    margin-right: 30px;
     margin-bottom: 30px;
     background-color: rgb(245, 245, 248);
   }
 
   .disk-card {
-    width: 960px;
+    width: 400px;
     max-height: 600px;
+    margin-right: 30px;
     margin-bottom: 30px;
     background-color: rgb(245, 245, 248);
   }
