--- a/webapp/src/app/components/login/login.component.css
+++ b/webapp/src/app/components/login/login.component.css
@@ -3,16 +3,13 @@
   }
 
   .login-card {
+    margin: 30px;
     max-width: 700px;
-    max-height: 250px;
+    max-height: 300px;
     background-color: rgb(245, 245, 248);
   }
 
   .form-width {
-    width: 90%;
-  }
-
-  .topline {
-    display: grid;
-    grid-auto-flow: column;
+    width: 300px;
+    margin-right: 20px;
   }
