--- a/webapp/src/app/components/system/system.component.css
+++ b/webapp/src/app/components/system/system.component.css
@@ -4,20 +4,25 @@
 }
 
 .system {
+  margin-top: 30px;
   display: inline-flex;
   flex-wrap: wrap;
   }
   
   .app-card {
     margin-right: 30px;
-    margin-top: 30px;
+    margin-bottom: 30px;
     width: 400px;
     max-height: 400px;
     background-color: rgb(245, 245, 248);
   }
 
-  .warning-card {
+  .Warnings {
     margin-top: 30px;
+  }
+
+  .warning-card {
+    margin-bottom: 30px;
     margin-right: 30px;
     max-width: 800px;
     max-height: 300px;
