--- a/webapp/src/app/components/system/system.component.html
+++ b/webapp/src/app/components/system/system.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="app-toolbar">
     <span>System</span>
 </mat-toolbar>
-<mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start" class="tab-group">
+<mat-tab-group dynamicHeight mat-stretch-tabs="false" mat-align-tabs="start" class="tab-group">
     <mat-tab label="System Info">
         <div class="system">
             <mat-card class="app-card">
@@ -36,12 +36,14 @@
         </div>
     </mat-tab>
     <mat-tab label="Warnings">
-        <mat-card class="warning-card" *ngFor="let Warning of SystemInfo.Warnings">
-            <mat-card-header>
-              <mat-card-title></mat-card-title>
-              <mat-card-subtitle>{{Warning}}</mat-card-subtitle>
-            </mat-card-header>
-            <mat-card-content></mat-card-content>
-        </mat-card>
+        <div class="Warnings">
+            <mat-card class="warning-card" *ngFor="let Warning of SystemInfo.Warnings">
+                <mat-card-header>
+                  <mat-card-title></mat-card-title>
+                  <mat-card-subtitle>{{Warning}}</mat-card-subtitle>
+                </mat-card-header>
+                <mat-card-content></mat-card-content>
+            </mat-card>
+        </div>
     </mat-tab>
 </mat-tab-group>      
