--- a/webapp/src/app/navigation/nav-menu/nav-menu.component.html
+++ b/webapp/src/app/navigation/nav-menu/nav-menu.component.html
@@ -31,6 +31,7 @@
       <span class="example-spacer"></span>
       <mat-icon *ngIf="isAuthenticated()">account_circle</mat-icon>
       <span style="font-size: 12pt;" [innerText]="loggedUser()"></span>
+      <button mat-button class="example-icon" (click)="openDocs()">Docs</button>
       <button mat-button class="example-icon" *ngIf="isAuthenticated()" (click)="logout()">Logout</button>
     </mat-toolbar>
     <!-- Add Content Here -->
