--- a/webapp/src/app/components/users/users.component.html
+++ b/webapp/src/app/components/users/users.component.html
@@ -7,7 +7,7 @@
     </div>
 <div class="Users">
     <span *ngFor="let user of Users?.Users; let i = index">
-    <mat-card class="user-card" *ngIf="roleAdmin() || getCurrentUserId()==user.ID">
+    <mat-card class="user-card" *ngIf="roleAdmin() || getCurrentUserId()==user.UUID">
         <mat-card-header>
           <mat-card-title></mat-card-title>
           <mat-card-subtitle></mat-card-subtitle>
@@ -35,16 +35,16 @@
                 <h4>Select accessible areas:</h4>
             </div>
             <div class="bottomline" *ngIf="roleAdmin()">
-                <!-- <mat-checkbox class="checkbox-margin" color="primary" [(ngModel)]="user.Permissions.Apps">Apps</mat-checkbox> -->
-                <mat-checkbox class="checkbox-margin" color="primary" [(ngModel)]="user.Permissions.AppsRepository">App Repository</mat-checkbox>
-                <mat-checkbox class="checkbox-margin" color="primary" [(ngModel)]="user.Permissions.AppLauncher">App Launcher</mat-checkbox>
-                <mat-checkbox class="checkbox-margin" color="primary" [(ngModel)]="user.Permissions.Images">Images</mat-checkbox>
-                <mat-checkbox class="checkbox-margin" color="primary" [(ngModel)]="user.Permissions.Volumes">Volumes</mat-checkbox>
-                <mat-checkbox class="checkbox-margin" color="primary" [(ngModel)]="user.Permissions.Networks">Networks</mat-checkbox>
-                <mat-checkbox class="checkbox-margin" color="primary" [(ngModel)]="user.Permissions.System">System</mat-checkbox>
-                <mat-checkbox class="checkbox-margin" color="primary" [(ngModel)]="user.Permissions.Users">Users</mat-checkbox>
-                <mat-checkbox class="checkbox-margin" color="primary" [(ngModel)]="user.Permissions.HostSettings">Host Settings</mat-checkbox>
-                <mat-checkbox class="checkbox-margin" color="primary" [(ngModel)]="user.Permissions.HostStats">Host Stats</mat-checkbox>
+                <!-- <mat-checkbox class="checkbox-margin" color="primary" [(ngModel)]="user.Permission.Apps">Apps</mat-checkbox> -->
+                <mat-checkbox class="checkbox-margin" color="primary" [(ngModel)]="user.Permission.AppsRepository">App Repository</mat-checkbox>
+                <mat-checkbox class="checkbox-margin" color="primary" [(ngModel)]="user.Permission.AppLauncher">App Launcher</mat-checkbox>
+                <mat-checkbox class="checkbox-margin" color="primary" [(ngModel)]="user.Permission.Images">Images</mat-checkbox>
+                <mat-checkbox class="checkbox-margin" color="primary" [(ngModel)]="user.Permission.Volumes">Volumes</mat-checkbox>
+                <mat-checkbox class="checkbox-margin" color="primary" [(ngModel)]="user.Permission.Networks">Networks</mat-checkbox>
+                <mat-checkbox class="checkbox-margin" color="primary" [(ngModel)]="user.Permission.System">System</mat-checkbox>
+                <mat-checkbox class="checkbox-margin" color="primary" [(ngModel)]="user.Permission.Users">Users</mat-checkbox>
+                <mat-checkbox class="checkbox-margin" color="primary" [(ngModel)]="user.Permission.HostSettings">Host Settings</mat-checkbox>
+                <mat-checkbox class="checkbox-margin" color="primary" [(ngModel)]="user.Permission.HostStats">Host Stats</mat-checkbox>
             </div>
             <div class="lastline" *ngIf="roleAdmin()">
                 <h4>Apps Repository URL:</h4>
@@ -56,7 +56,7 @@
         </mat-card-content>
         <mat-card-actions align="end">
             <button mat-button (click)="updateUser(user)"    [disabled]="!roleUser()">Update User</button>
-            <button mat-button (click)="deleteUser(user.ID)" [disabled]="!roleAdmin()" >Delete User</button>
+            <button mat-button (click)="deleteUser(user)" [disabled]="!roleAdmin()" >Delete User</button>
         </mat-card-actions>
     </mat-card>
     </span>
